# karvanan

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements.txt  run.py  slack_app_manifest.yml
core/: asgi.py  settings.py  urls.py  wsgi.py
data_loss_prevention/: __init__.py  admin.py  apps.py  run.py  tasks.py  tests.py  utils.py
data_loss_prevention/managers/: loss_prevention_manager.py  manager.py
data_loss_prevention/migrations/: 0001_initial.py  0002_alter_caughtmessage_sent_at.py
data_loss_prevention/models/: __init__.py  message.py  pattern.py
docker/tasks_app/: entrypoint.sh
queue_client/: aws_queue_client.py  queue_client.py
slack_manager/: apps.py  tasks.py  tests.py  urls.py
slack_manager/views/: slack.py
