[tool.poetry]
name = "core"
version = "0.1.0"
description = "Data Loss Prevention tool"
authors = ["karzio <karol0602@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.4"
django-boto = "^0.3.12"
slack-sdk = "^3.27.1"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.1"
boto3 = "^1.34.84"
requests = "^2.31.0"
mysql-connector-python = "^8.3.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
